# rust-mc

./: .gitmodules  Cargo.toml
src/: lib.rs  main.rs
src/minecraft/: client.rs  connection.rs  mod.rs  proxy.rs  server.rs  status.rs
src/minecraft/server/: event.rs
src/mojang/: auth.rs
