[package]
name = "rust-mc"
version = "0.2.0"
authors = ["willemml"]
license = "GPL-3.0-only"
description = "A Minecraft client library using mcproto-rs and mctokio."
repository = "https://github.com/willemml/rust-mc"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
mcproto-rs = { path = "./mcproto-rs", features = ["v1_16_3"] }
mctokio = { path = "./mctokio" }
anyhow = "1.0.34"
rand = "0.8.5"
serde_json = "1.0.82"
serde = "1.0.117"
reqwest = "0.11.11"
hex = "0.4.2"
futures = "0.3"
openssl = "0.10.30"
log = "0.4.0"
env_logger = "0.9.0"
